# BiliMusicPlayer

./: .gitignore  2023141461061.py  CMakeLists.txt  CMakePresets.json  README.md  bili_music_player.db  pom.xml
app/: BiliMusicPlayerApp.cpp  BiliMusicPlayerApp.h  CMakeLists.txt  ServiceRegistry.cpp  ServiceRegistry.h  main.cpp
common/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  PlaybackMode.cpp  PlaybackMode.h  PlaybackState.h
common/entities/: Playlist.cpp  Playlist.h  Song.cpp  Song.h
config/: app_config.json
core/: CMakeLists.txt  DownloadService.h  PlaybackService.h
data/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  PlaylistRepository.cpp  PlaylistRepository.h  SongRepository.cpp  SongRepository.h
examples/: CMakeLists.txt  concurrent_download_example.cpp
infra/: CMakeLists.txt  DownloadConfig.cpp  DownloadConfig.h  FfmpegClient.cpp  FfmpegClient.h  FileSystemHelper.h  Logger.h  MetadataParser.cpp  MetadataParser.h  ProcessRunner.cpp  ProcessRunner.h  YtDlpClient.cpp  YtDlpClient.h
service/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  ConcurrentDownloadConfig.h  ConcurrentDownloadManager.cpp  ConcurrentDownloadManager.h  DownloadService.cpp  DownloadService.h  DownloadTaskState.h  DownloadWorker.cpp  DownloadWorker.h  LibraryService.cpp  LibraryService.h  PlaybackHistory.cpp  PlaybackHistory.h  PlaybackQueue.cpp  PlaybackQueue.h  PlaybackService.cpp  PlaybackService.h  PlaylistManager.cpp  PlaylistManager.h
src/main/java/com/bilibili/musicplayer/: MainApplication.java
src/main/java/com/bilibili/musicplayer/controller/: DownloadController.java  LeftSidebarController.java  LibraryController.java  MainController.java  PlaybackController.java  SettingsController.java
src/main/java/com/bilibili/musicplayer/model/: Playlist.java  Song.java
src/main/java/com/bilibili/musicplayer/service/: BatchDownloadService.java  BiliDownloader.java  MediaPlayerService.java  PlaybackMode.java  PlaylistDAO.java  SongDAO.java
src/main/java/com/bilibili/musicplayer/util/: AppConfig.java  AppConfigData.java  DatabaseManager.java  VlcjManager.java
src/main/resources/com/bilibili/musicplayer/: DownloadView.fxml  LeftSidebar.fxml  LibraryView.fxml  PlaybackBar.fxml  SettingsView.fxml  mainwindow.fxml
src/main/resources/css/: style.css
tests/: CMakeLists.txt  test_basic.cpp  test_binaries.cpp  test_concurrent_download.cpp  test_download_service.cpp  test_downloader.cpp  test_repository.cpp
ui/: CMakeLists.txt  resources.qrc
ui/components/: DownloadTaskItem.cpp  DownloadTaskItem.h  HoverButton.cpp  HoverButton.h  PlaybackBar.cpp  PlaybackBar.h  Toast.cpp  Toast.h
ui/dialogs/: PlaylistDialog.cpp  PlaylistDialog.h
ui/pages/: DownloadManagerPage.cpp  DownloadManagerPage.h  LibraryPage.cpp  LibraryPage.h
ui/pages/settings/: AdvancedSettingsWidget.cpp  AdvancedSettingsWidget.h  DatabaseSettingsWidget.cpp  DatabaseSettingsWidget.h  DownloadSettingsWidget.cpp  DownloadSettingsWidget.h  SettingsPage.cpp  SettingsPage.h  ToolsSettingsWidget.cpp  ToolsSettingsWidget.h  UISettingsWidget.cpp  UISettingsWidget.h
ui/styles/: main.qss
ui/themes/: ThemeManager.cpp  ThemeManager.h  dark.qss  light.qss
ui/windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui
viewmodel/: CMakeLists.txt  DownloadViewModel.cpp  DownloadViewModel.h  LibraryViewModel.cpp  LibraryViewModel.h
